# openclaw-memory-noesis

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BHA.md  DEVELOPMENT.md  Health-Library-Index.md  IDENTITY.md  INSTALL.md  KHA.md  LHA.md  MEMORY.md  README.md  SOUL.md  SUMMARY.md  TOOLS.md  USER.md  install.sh  noesis.toml  pyproject.toml
.github/: copilot-instructions.md
cron/: jobs.json  jobs.json.bak-20260205-124857
cron/runs/: 0690a2f2-7354-4056-9092-ca0e1d1dff67.jsonl  11e39d03-8580-431d-bc8f-d9ad4c5ade08.jsonl  13b95786-8cad-48bc-81fa-67afb7aad20b.jsonl  1791f8e3-806a-41ee-bd4d-9d135802b32e.jsonl  2305801f-2d1a-40a6-a5e0-1f4f270a9f79.jsonl  239267ed-0be2-4d09-ad25-8afad7cab58f.jsonl  240d7e9c-06d3-43ee-97dd-9a36c90617dc.jsonl  2ae47667-6b83-4e03-8f6a-d813ff01df37.jsonl  2c2e241b-0ea5-40df-b498-ab579793a1ff.jsonl  2e093e49-38a6-4ee8-ac3b-4007073cc70e.jsonl  (+26 more)
docs/: KOSHA_HEALTH.md  PHASE11-ENHANCED-TELEMETRY.json  PHASE11-ENHANCED-TELEMETRY.md  QUICK_REFERENCE.md  README.md  TELEMETRY.md
docs/diagrams/: user-journey.drawio  (+1 more)
library-index/: KHA-VEDIC-INTEGRATION-SUMMARY.md  Occult-Library-Index.md  Technology-Library-Index.md
memory/: build-summary.md  compaction-verification.md  intake-scan-state.json  nightly-backlog.md  nightly-builder-protocol.md  nightly-builds.md  vault-para-map.md
noesis/: __init__.py  __main__.py  cli.py  config.py
skills/: modelbrain.md
tests/: conftest.py  test_noesis.py  test_telemetry.py
workspace-chitta-weaver/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  daily-memory  daily_memory.py  moc_suggester.py
workspace-kosha-regulator/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  TOOLS.md
workspace-nadi-mapper/: IDENTITY.md  SOUL.md
workspace-noesis-vishwakarma/: IDENTITY.md  MEMORY.md  TOOLS.md  USER.md
(+347 files in other folders)
